syntax = "proto3";

package io.users.patient.api;

option java_outer_classname = "PatientApi";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "kalix/annotations.proto";

service PatientService {
    option (kalix.codegen) = {
      value_entity: {
        name: "io.users.patient.domain.Patient"
        entity_type: "patients"
        state: "io.users.patient.domain.PatientState"
      }
    };
  
    rpc CreatePatient(Patient) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/create_patient"
            body: "*"
        };
    }

    rpc GetPatient(GetPatientRequest) returns (Patient) {
        option (google.api.http) = {
            post: "/get_patient"
            body: "*"
        };
    }

    rpc UpdatePatient(patient.api.Patient) returns (google.protobuf.Empty);
}

message Patient {
    string id = 1;
    string email = 2 [(kalix.field).entity_key = true];
    string password = 3;
    string first_name = 4;
    string last_name = 5;
    string role = 6;
    // Patient
    string gender = 7;
    string mobile = 8;
    string date_of_birth = 9;
    int32 age = 10;
    string marital_status = 11;
    string address = 12;
    string blood_group = 13;
    string blood_pressure = 14;
    string sugger = 15;
    string injury = 16;
    string img = 17;
}

message GetPatientRequest {
    string email = 1 [(kalix.field).entity_key = true];
}